added resume pdf

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Jessica Ramirez Portfolio" />
 
 
-  <link rel="shortcut icon" href="ftco-32x32.png">
+ 
 
   <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Open+Sans:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
@@ -123,7 +123,7 @@
             <h2 class="section-title">About</h2>
           </div>
           <div class="col-lg-4 order-1 order-lg-3 mb-4 mb-lg-0">
-            <div class="bg-light pt-5">
+            <div class="bg-light">
               <img src="images/jrc.jpeg" alt="Jessica Ramirez About" class="img-fluid">
             </div>
           </div>
@@ -160,9 +160,8 @@
 
           <div class="col-md-6 mb-4">
             <div class="service d-flex h-100">
-              <div class="service-number mr-4"><span>01</span></div>
               <div class="service-about">
-                <h3><a href="#">Open Resume</a></h3>
+                <h3><a href="JRCResume.pdf">Open Resume</a></h3>
               </div>
             </div>
           </div>
