updated resume sections style

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     <div class="site-section bg-primary" id="services-section">
       <div class="container">
-        <div class="row ">
+        <div class="row resume">
           <div class="col-12 mb-5 position-relative">
             <h2 class="section-title text-center mb-5 text-white">Resume</h2>
           </div>
@@ -161,7 +161,7 @@
           <div class="col-md-6 mb-4">
             <div class="service d-flex h-100">
               <div class="service-about">
-                <h3><a href="JRCResume.pdf">Open Resume</a></h3>
+                <h3><a href="JRCResume.pdf">Download File</a></h3>
               </div>
             </div>
           </div>
