--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Jessica Ramirez Portfolio" />
 
 
- 
+
 
   <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Open+Sans:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
@@ -186,8 +186,10 @@
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <div class="portfolio-inner-divs">
               <div class="project-links">
-                <button type="button" class="btn btn-primary"><a href="https://jessicaramirezcalderon.github.io/pwrd-generator/">Link</a></button>
-                <button type="button" class="btn btn-primary"><a href="https://github.com/jessicaramirezcalderon/pwrd-generator">GitHub</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://jessicaramirezcalderon.github.io/pwrd-generator/">Link</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://github.com/jessicaramirezcalderon/pwrd-generator">GitHub</a></button>
               </div>
             </div>
             <a href="#" class="item-wrap fancybox">
@@ -198,8 +200,10 @@
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <div class="portfolio-inner-divs">
               <div class="project-links">
-                <button type="button" class="btn btn-primary"><a href="https://jessicaramirezcalderon.github.io/day-planner/">Link</a></button>
-                <button type="button" class="btn btn-primary"><a href="https://github.com/jessicaramirezcalderon/day-planner">GitHub</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://jessicaramirezcalderon.github.io/day-planner/">Link</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://github.com/jessicaramirezcalderon/day-planner">GitHub</a></button>
               </div>
             </div>
             <a href="#" class="item-wrap fancybox">
@@ -210,8 +214,10 @@
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <div class="portfolio-inner-divs">
               <div class="project-links">
-                <button type="button" class="btn btn-primary"><a href="https://jessicaramirezcalderon.github.io/code-quiz/">Link</a></button>
-                <button type="button" class="btn btn-primary"><a href="https://github.com/jessicaramirezcalderon/code-quiz">GitHub</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://jessicaramirezcalderon.github.io/code-quiz/">Link</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://github.com/jessicaramirezcalderon/code-quiz">GitHub</a></button>
               </div>
             </div>
             <a href="#" class="item-wrap fancybox">
@@ -222,8 +228,10 @@
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <div class="portfolio-inner-divs">
               <div class="project-links">
-                <button type="button" class="btn btn-primary"><a href="https://desolate-wildwood-45282.herokuapp.com/">Link</a></button>
-                <button type="button" class="btn btn-primary"><a href="https://github.com/jessicaramirezcalderon/note-taker">GitHub</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://desolate-wildwood-45282.herokuapp.com/">Link</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://github.com/jessicaramirezcalderon/note-taker">GitHub</a></button>
               </div>
             </div>
             <a href="#" class="item-wrap fancybox">
@@ -234,8 +242,10 @@
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <div class="portfolio-inner-divs">
               <div class="project-links">
-                <button type="button" class="btn btn-primary"><a href="https://jessicaramirezcalderon.github.io/weather-gallery/">Link</a></button>
-                <button type="button" class="btn btn-primary"><a href="https://github.com/jessicaramirezcalderon/weather-gallery">GitHub</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://jessicaramirezcalderon.github.io/weather-gallery/">Link</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://github.com/jessicaramirezcalderon/weather-gallery">GitHub</a></button>
               </div>
             </div>
             <a href="#" class="item-wrap fancybox">
@@ -246,8 +256,10 @@
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <div class="portfolio-inner-divs">
               <div class="project-links">
-                <button type="button" class="btn btn-primary"><a href="https://drive.google.com/drive/folders/15rlk2ZKfxwTe5SgE6vr7yJuamvaqpn22">Demo</a></button>
-                <button type="button" class="btn btn-primary"><a href="https://github.com/jessicaramirezcalderon/team-profile-generator">GitHub</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://drive.google.com/drive/folders/15rlk2ZKfxwTe5SgE6vr7yJuamvaqpn22">Demo</a></button>
+                <button type="button" class="btn btn-primary"><a
+                    href="https://github.com/jessicaramirezcalderon/team-profile-generator">GitHub</a></button>
               </div>
             </div>
             <a href="#" class="item-wrap fancybox">
@@ -261,68 +273,26 @@
     </section>
 
 
-    <section class="site-section" id="contact-section">
+    <div class="site-section bg-primary" id="contact-section">
       <div class="container">
-        <div class="row">
+        <div class="row resume">
           <div class="col-12 mb-5 position-relative">
-            <h2 class="section-title text-center mb-5">Contact Form</h2>
+            <h2 class="section-title text-center mb-5 text-white">Contact</h2>
           </div>
+
+          <div class="col-md-6 mb-4">
+            <div class="service d-flex h-100">
+              <div class="service-about">
+                <h3><a href="JRCResume.pdf">Download File</a></h3>
+              </div>
+            </div>
+          </div>
+
         </div>
-        <form action="#" class="form">
-          <div class="row mb-4">
-            <div class="form-group col-6">
-              <input type="text" class="form-control" placeholder="First name">
-            </div>
-            <div class="form-group col-6">
-              <input type="text" class="form-control" placeholder="Full name">
-            </div>
-          </div>
-
-          <div class="row mb-4">
-            <div class="form-group col-12">
-              <input type="email" class="form-control" placeholder="Email address">
-            </div>
-          </div>
-
-          <div class="row mb-4">
-            <div class="form-group col-12">
-              <input type="text" class="form-control" placeholder="Subject of the message">
-            </div>
-          </div>
-
-          <div class="row mb-4">
-            <div class="form-group col-12">
-              <textarea name="" id="" cols="30" rows="10" class="form-control"
-                placeholder="Type your message here.."></textarea>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-6">
-              <input type="submit" class="btn btn-primary" value="Send Message">
-            </div>
-          </div>
-
-        </form>
       </div>
-    </section>
-
-    <footer class="site-section bg-light footer">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-3">
-            <h3 class="footer-title">Follow Me</h3>
-            <a href="#" class="social-circle"><span class="icon-twitter"></span></a>
-            <a href="#" class="social-circle"><span class="icon-facebook"></span></a>
-            <a href="#" class="social-circle"><span class="icon-instagram"></span></a>
-            <a href="#" class="social-circle"><span class="icon-dribbble"></span></a>
-            <a href="#" class="social-circle"><span class="icon-linkedin"></span></a>
-          </div>
-        </div>
+    </div>
 
 
-      </div>
-    </footer>
 
   </div> <!-- .site-wrap -->
 
