removed empty image container

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
       </div>
 
-      <img src="" alt="Jessica Ramirez" class="img-face" data-aos="fade">
+      <!-- <img src="images/jrc.jpeg" alt="Jessica Ramirez" class="img-face" data-aos="fade"> -->
 
 
     </div>
